@@ -3,52 +3,57 @@
 <KDevPrjSession>
  <LastCompileConfig>(Default)</LastCompileConfig>
  <Mainframe MaximizeMode="1" />
- <DocsAndViews NumberOfDocuments="9" >
-  <Doc0 NumberOfViews="1" URL="file:/home/thomas/develop/rkward/rkward/rkvarslot.h" >
-   <View0 line="49" Type="???" >
+ <DocsAndViews NumberOfDocuments="10" >
+  <Doc0 NumberOfViews="1" URL="file:/home/thomas/develop/rkward/rkward/rembedinternal.cpp" >
+   <View0 line="122" Type="???" >
     <AdditionalSettings Top="2" Width="954" Attach="1" Height="514" Left="2" MinMaxMode="0" />
    </View0>
   </Doc0>
-  <Doc1 NumberOfViews="1" URL="file:/home/thomas/develop/rkward/rkward/rkvarslot.cpp" >
-   <View0 line="127" Type="???" >
+  <Doc1 NumberOfViews="1" URL="file:/home/thomas/develop/rkward/rkward/rembedinternal.h" >
+   <View0 line="38" Type="???" >
     <AdditionalSettings Top="2" Width="954" Attach="1" Height="514" Left="2" MinMaxMode="0" />
    </View0>
   </Doc1>
-  <Doc2 NumberOfViews="1" URL="file:/home/thomas/develop/rkward/rkward/rkvarselector.h" >
-   <View0 line="0" Type="???" >
+  <Doc2 NumberOfViews="1" URL="file:/home/thomas/develop/rkward/rkward/rembed.cpp" >
+   <View0 line="80" Type="???" >
     <AdditionalSettings Top="2" Width="954" Attach="1" Height="514" Left="2" MinMaxMode="0" />
    </View0>
   </Doc2>
-  <Doc3 NumberOfViews="1" URL="file:/home/thomas/develop/rkward/rkward/rkvarselector.cpp" >
-   <View0 line="10" Type="???" >
+  <Doc3 NumberOfViews="1" URL="file:/home/thomas/develop/rkward/rkward/rembed.h" >
+   <View0 line="39" Type="???" >
     <AdditionalSettings Top="2" Width="954" Attach="1" Height="514" Left="2" MinMaxMode="0" />
    </View0>
   </Doc3>
-  <Doc4 NumberOfViews="1" URL="file:/home/thomas/develop/rkward/rkward/plugins/20descriptive/code.php" >
-   <View0 line="67" Type="???" >
+  <Doc4 NumberOfViews="1" URL="file:/home/thomas/develop/rkward/rkward/phpbackend.cpp" >
+   <View0 line="0" Type="???" >
     <AdditionalSettings Top="2" Width="954" Attach="1" Height="514" Left="2" MinMaxMode="0" />
    </View0>
   </Doc4>
-  <Doc5 NumberOfViews="1" URL="file:/home/thomas/develop/rkward/rkward/rkplugin.cpp" >
-   <View0 line="176" Type="???" >
+  <Doc5 NumberOfViews="1" URL="file:/home/thomas/develop/rkward/rkward/common.php" >
+   <View0 line="22" Type="???" >
     <AdditionalSettings Top="2" Width="954" Attach="1" Height="514" Left="2" MinMaxMode="0" />
    </View0>
   </Doc5>
-  <Doc6 NumberOfViews="1" URL="file:/home/thomas/develop/rkward/rkward/rkwatch.cpp" >
-   <View0 line="85" Type="???" >
+  <Doc6 NumberOfViews="1" URL="file:/home/thomas/develop/rkward/rkward/rkplugin.cpp" >
+   <View0 line="352" Type="???" >
     <AdditionalSettings Top="2" Width="954" Attach="1" Height="514" Left="2" MinMaxMode="0" />
    </View0>
   </Doc6>
-  <Doc7 NumberOfViews="1" URL="file:/home/thomas/develop/rkward/TODO" >
-   <View0 line="16" Type="???" >
+  <Doc7 NumberOfViews="1" URL="file:/home/thomas/develop/rkward/rkward/rcommand.h" >
+   <View0 line="0" Type="???" >
     <AdditionalSettings Top="2" Width="954" Attach="1" Height="514" Left="2" MinMaxMode="0" />
    </View0>
   </Doc7>
-  <Doc8 NumberOfViews="1" URL="file:/home/thomas/develop/rkward/ChangeLog" >
+  <Doc8 NumberOfViews="1" URL="file:/home/thomas/develop/rkward/rkward/rcommand.cpp" >
    <View0 line="0" Type="???" >
     <AdditionalSettings Top="2" Width="954" Attach="1" Height="514" Left="2" MinMaxMode="0" />
    </View0>
   </Doc8>
+  <Doc9 NumberOfViews="1" URL="file:/home/thomas/develop/rkward/TODO" >
+   <View0 line="32" Type="???" >
+    <AdditionalSettings Top="2" Width="954" Attach="1" Height="514" Left="2" MinMaxMode="0" />
+   </View0>
+  </Doc9>
  </DocsAndViews>
  <pluginList>
   <kdevbookmarks>
