@@ -1,19 +1,27 @@
 <?
 
-function callR_val ($id) {
-	return (getInput ("requesting rcall:" . $id));
+// rename to getR
+function callR_val ($call) {
+	return (getInput ("requesting rcall:" . $call));
 }
 
-function callR ($id) {
-	echo (callR_val ($id));
+// rename to printR
+function callR ($call) {
+	echo (callR_val ($call));
 }
 
+// rename to getRK
 function getRK_val ($id) {
 	return (getInput ("requesting data:" . $id));
 }
 
+// rename to printRK
 function getRK ($id) {
 	echo (getRK_val ($id));
+}
+
+function getRVector ($call) {
+	return (explode ("\t", getInput ("requesting rvector:" . $call)));
 }
 
 function getInput ($prompt) {
