@@ -22,6 +22,7 @@ extern "C" {
 #include "R.h"
 
 #include <stdio.h>
+#include <string.h>
 
 #include "rembedinternal.h"
 
@@ -40,16 +41,17 @@ bool REmbedInternal::startR (const char* r_home, int argc, char** argv) {
 	if (Rf_initEmbeddedR(argc, argv) < 0) {
 		return false;
 	}
+	return true;
 }
 
-bool REmbedInternal::runCommandInternal (const char *command) {
+SEXP runCommandInternalBase (const char *command, bool *error) {
 // heavy copying from RServe below
 	int maxParts=1;
 	int r_error = 0;
 	int stat;
 	int *status = &stat;
 	const char *c = command;
-	SEXP cv, pr;
+	SEXP cv, pr, exp;
 
 	while (*c) {
 		if (*c=='\n' || *c==';') maxParts++;
@@ -73,7 +75,6 @@ bool REmbedInternal::runCommandInternal (const char *command) {
 
 	if (*status == 1) {
 		PROTECT (pr);
-		SEXP exp;
 		int errorOccurred;
 
 		exp=R_NilValue;
@@ -95,8 +96,70 @@ bool REmbedInternal::runCommandInternal (const char *command) {
 
 		UNPROTECT(1); /* pr */
 	}
+
+	*error = (r_error != 0);
+	return exp;
+}
+
+void REmbedInternal::runCommandInternal (const char *command, bool *error) {
+	runCommandInternalBase (command, error);
+}
+
+char **REmbedInternal::getCommandAsStringVector (const char *command, int *count, bool *error) {	
+	SEXP exp;
+	char **strings;
 	
-	return (r_error != 0);
+	PROTECT (exp = runCommandInternalBase (command, error));
+	
+	if (!*error) {
+		SEXP strexp;
+		PROTECT (strexp = coerceVector (exp, STRSXP));
+		*count = length (strexp);
+		strings = new char* [length (strexp)];
+		for (int i = 0; i < *count; ++i) {
+			SEXP dummy = VECTOR_ELT (strexp, i);
+			if (TYPEOF (dummy) != CHARSXP) {
+				strings[i] = strdup ("not defined");	// can this ever happen?
+			} else {
+				strings[i] = strdup ((char *) STRING_PTR (dummy));
+			}
+		}
+		UNPROTECT (1);	// strexp
+	}
+	
+	UNPROTECT (1); // exp
+	
+	if (*error) {
+		*count = 0;
+		return 0;
+	}
+	return strings;
+}
+
+double *REmbedInternal::getCommandAsRealVector (const char *command, int *count, bool *error) {
+	SEXP exp;
+	double *reals;
+	
+	PROTECT (exp = runCommandInternalBase (command, error));
+	
+	if (!*error) {
+		SEXP realexp;
+		PROTECT (realexp = coerceVector (exp, REALSXP));
+		*count = length (realexp);
+		reals = new double[*count];
+		for (int i = 0; i < *count; ++i) {
+				reals[i] = REAL (realexp)[i];
+		}
+		UNPROTECT (1);	// realexp
+	}
+	
+	UNPROTECT (1); // exp
+	
+	if (*error) {
+		*count = 0;
+		return 0;
+	}
+	return reals;
 }
 
 } // extern "C"
