@@ -1,4 +1,5 @@
-- support for selection of multiple variables at once (TODO: handling of x.label etc.)
+- allow direct (read) access of vectors in R (TODO: use for table-syncing)
+- support for selection of multiple variables at once
 - use a katepart as the command-editor (provides basic syntax-highlighting)
 - plugins can use a tabbook-layout
 - display status of R-process in the statusbar
